--- a/deployment/deployment.yml
+++ b/deployment/deployment.yml
@@ -1,32 +1,100 @@
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  name: webapp
   labels:
     app: webapp
+  name: webapp
 spec:
   replicas: 2
   template:
     metadata:
+      annotations:
+        linkerd.io/created-by: linkerd/cli stable-2.1.0
+        linkerd.io/proxy-version: stable-2.1.0
       labels:
         app: webapp
+        linkerd.io/control-plane-ns: linkerd
+        linkerd.io/proxy-deployment: webapp
     spec:
       containers:
-        - name: webapp
-          image: eu.gcr.io/mimir-185212/webapp:0.1
-          ports:
-            - containerPort: 8080
-              name: svc-port
-          livenessProbe:
-            httpGet:
-              path: /health
-              port: svc-port
-            initialDelaySeconds: 20
-          readinessProbe:
-            httpGet:
-              path: /health
-              port: svc-port
-            initialDelaySeconds: 20
-          imagePullPolicy: Always
+      - name: webapp
+        image: eu.gcr.io/mimir-185212/webapp:0.1
+        ports:
+        - containerPort: 8080
+          name: svc-port
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: svc-port
+          initialDelaySeconds: 20
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: svc-port
+          initialDelaySeconds: 20
+        imagePullPolicy: Always
+      - name: linkerd-proxy
+        image: gcr.io/linkerd-io/proxy:stable-2.1.0    
+        ports:
+        - containerPort: 4143
+          name: linkerd-proxy
+        - containerPort: 4191
+          name: linkerd-metrics
+        env:
+        - name: LINKERD2_PROXY_LOG
+          value: warn,linkerd2_proxy=info
+        - name: LINKERD2_PROXY_BIND_TIMEOUT
+          value: 10s
+        - name: LINKERD2_PROXY_CONTROL_URL
+          value: tcp://linkerd-proxy-api.linkerd.svc.cluster.local:8086
+        - name: LINKERD2_PROXY_CONTROL_LISTENER
+          value: tcp://0.0.0.0:4190
+        - name: LINKERD2_PROXY_METRICS_LISTENER
+          value: tcp://0.0.0.0:4191
+        - name: LINKERD2_PROXY_OUTBOUND_LISTENER
+          value: tcp://127.0.0.1:4140
+        - name: LINKERD2_PROXY_INBOUND_LISTENER
+          value: tcp://0.0.0.0:4143
+        - name: LINKERD2_PROXY_DESTINATION_PROFILE_SUFFIXES
+          value: .
+        - name: LINKERD2_PROXY_POD_NAMESPACE
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.namespace
+        livenessProbe:
+          httpGet:
+            path: /metrics
+            port: 4191
+          initialDelaySeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /metrics
+            port: 4191
+          initialDelaySeconds: 10
+        resources: {}
+        securityContext:
+          runAsUser: 2102
+        terminationMessagePolicy: FallbackToLogsOnError
+        imagePullPolicy: IfNotPresent
       imagePullSecrets:
       - name: gcr-json-key
+      initContainers:
+      - name: linkerd-init
+        image: gcr.io/linkerd-io/proxy-init:stable-2.1.0
+        args:
+        - --incoming-proxy-port
+        - "4143"
+        - --outgoing-proxy-port
+        - "4140"
+        - --proxy-uid
+        - "2102"
+        - --inbound-ports-to-ignore
+        - 4190,4191     
+        resources: {}
+        securityContext:
+          capabilities:
+            add:
+            - NET_ADMIN
+          privileged: false
+        terminationMessagePolicy: FallbackToLogsOnError
+        imagePullPolicy: IfNotPresent
